  - Added the ``prepend`` and ``append`` options to the
    :rst:dir:`literalinclude` directive.
  - #284: All docinfo metadata is now put into the document metadata, not
    just the author.
  - The :rst:role:`ref` role can now also reference tables by caption.
  - The :rst:dir:`include` directive now supports absolute paths, which
    are interpreted as relative to the source directory.

* Configuration:

  - Added :confval:`rst_prolog` config value.
  - Added :confval:`html_secnumber_suffix` config value to control
    section numbering format.
  - Added :confval:`html_compact_lists` config value to control
    docutils' compact lists feature.
  - The :confval:`html_sidebars` config value can now contain patterns
    as keys, and the values can be lists that explicitly select which
    sidebar templates should be rendered.  That means that the builtin
    sidebar contents can be included only selectively.
  - :confval:`html_static_path` can now contain single file entries.
  - The new universal config value :confval:`exclude_patterns` makes the
    old :confval:`unused_docs`, :confval:`exclude_trees` and
    :confval:`exclude_dirnames` obsolete.
  - Added :confval:`html_output_encoding` config value.
  - Added the :confval:`latex_docclass` config value and made the
    "twoside" documentclass option overridable by "oneside".
  - Added the :confval:`trim_doctest_flags` config value, which is true
    by default.
  - Added :confval:`html_show_copyright` config value.
  - Added :confval:`latex_show_pagerefs` and :confval:`latex_show_urls`
    config values.

* New builders:

  - Added a builder for the Epub format.
  - Added a builder for manual pages.
  - Added a single-file HTML builder.

* HTML output:

  - Inline roles now get a CSS class with their name, allowing styles to
    customize their appearance.  Domain-specific roles get two classes,
    ``domain`` and ``domain-rolename``.
  - References now get the class ``internal`` if they are internal to